fix: use relative paths

--- a/themes/minimal-v2/include-modules.ini
+++ b/themes/minimal-v2/include-modules.ini
@@ -1,22 +1,22 @@
-include-file = $HOME/polybar-collection/themes/minimal/colors.ini
+include-file = colors.ini
 
-include-file = $HOME/polybar-collection/themes/minimal/modules/margin.ini
+include-file = modules/margin.ini
 
-include-file = $HOME/polybar-collection/themes/minimal/modules/battery.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/bspwm.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/cpu.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/date.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/dnd.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/ewmh.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/i3.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/memory.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/mpd.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/pulseaudio.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/session.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/temperature.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/title.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/wallz.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/weather.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/wired.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/wlan.ini
-include-file = $HOME/polybar-collection/themes/minimal/modules/xbacklight.ini
+include-file = modules/battery.ini
+include-file = modules/bspwm.ini
+include-file = modules/cpu.ini
+include-file = modules/date.ini
+include-file = modules/dnd.ini
+include-file = modules/ewmh.ini
+include-file = modules/i3.ini
+include-file = modules/memory.ini
+include-file = modules/mpd.ini
+include-file = modules/pulseaudio.ini
+include-file = modules/session.ini
+include-file = modules/temperature.ini
+include-file = modules/title.ini
+include-file = modules/wallz.ini
+include-file = modules/weather.ini
+include-file = modules/wired.ini
+include-file = modules/wlan.ini
+include-file = modules/xbacklight.ini
