--- a/themes/minimal-v2/config.ini
+++ b/themes/minimal-v2/config.ini
@@ -1,7 +1,7 @@
 ;   To learn more about how to configure Polybar
 ;   go to https://github.com/polybar/polybar
 
-include-file = $HOME/polybar-collection/themes/minimal/include-modules.ini
+include-file = include-modules.ini
 
 [bar/main]
 width = 100%
@@ -23,8 +23,8 @@ enable-ipc = true
 background = ${colors.bg}
 foreground = ${colors.fg}
 
-include-file = $HOME/polybar-collection/fonts.ini
-include-file = $HOME/polybar-collection/modules.ini
+include-file = ../../fonts.ini
+include-file = ../../modules.ini
 
 tray-background = ${colors.bg}
 tray-position = right
