--- a/themes/minimal-v2/config.ini
+++ b/themes/minimal-v2/config.ini
@@ -7,10 +7,10 @@ include-file = include-modules.ini
 width = 100%
 height = 30
 offset-y = 0
-bottom = true
+bottom = false
 fixed-center = true
 
-wm-restack = bspwm
+; wm-restack = bspwm
 ; wm-restack = i3
 
 override-redirect = false
