fix: include xwindow and xworkspaces

--- a/themes/minimal-v2/include-modules.ini
+++ b/themes/minimal-v2/include-modules.ini
@@ -20,3 +20,5 @@ include-file = modules/weather.ini
 include-file = modules/wired.ini
 include-file = modules/wlan.ini
 include-file = modules/xbacklight.ini
+include-file = modules/xwindow.ini
+include-file = modules/xworkspaces.ini
