--- a/themes/minimal-v2/modules/xworkspaces.ini
+++ b/themes/minimal-v2/modules/xworkspaces.ini
@@ -2,17 +2,17 @@
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-background = ${colors.bg-alt}
+label-active-underline= ${colors.fg}
 label-active-padding = 1
 
 label-occupied = %name%
 label-occupied-padding = 1
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${colors.yellow}
 label-urgent-padding = 1
 
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
+label-empty-foreground = ${colors.semi-trans-black}
 label-empty-padding = 1
