feat: cp clock symbol from lofi

--- a/themes/minimal-v2/modules/date.ini
+++ b/themes/minimal-v2/modules/date.ini
@@ -5,7 +5,7 @@ interval = 1
 time = "%H:%M"
 time-alt = "%d-%m-%Y %H:%M:%S"
 
-format = <label>
+format = %{T7}%{T-} <label>
 format-padding = 1
 label = %{T2}%time%%{T-}
 label-padding = 1
