--- a/themes/minimal-v2/modules/wlan.ini
+++ b/themes/minimal-v2/modules/wlan.ini
@@ -1,13 +1,13 @@
 [module/wlan]
 type = internal/network
-interface = wlp2s0
+interface = wlp0s20f3
 interval = 1.0
 
 format-connected = <label-connected>
 format-connected-padding = 1
 format-connected-prefix = %{T2}WRL %{T-}
 format-connected-prefix-foreground = ${colors.fg-alt}
-label-connected = %{T2}%downspeed%%{T-}
+label-connected = %{T2}%signal% %downspeed%%{T-}
 label-connected-foreground = ${colors.fg}
 
 format-disconnected = <label-disconnected>
