--- a/themes/minimal-v2/modules/battery.ini
+++ b/themes/minimal-v2/modules/battery.ini
@@ -1,8 +1,11 @@
 [module/battery]
 type = internal/battery
-battery = BAT1
-adapter = ACAD
-full-at = 98
+battery = BAT0
+adapter = AC
+full-at = 100
+
+poll-interval = 5
+time-format = %H:%M
 
 format-charging = <label-charging>
 format-charging-padding = 1
