fix: add backlight to incl modules

--- a/themes/minimal-v2/include-modules.ini
+++ b/themes/minimal-v2/include-modules.ini
@@ -2,6 +2,8 @@ include-file = colors.ini
 
 include-file = modules/margin.ini
 
+
+include-file = modules/backlight.ini
 include-file = modules/battery.ini
 include-file = modules/bspwm.ini
 include-file = modules/cpu.ini
