--- a/modules.ini
+++ b/modules.ini
@@ -1,3 +1,3 @@
-modules-left = bspwm
-modules-center = mpd
-modules-right = date weather
+modules-left = xworkspaces 
+modules-center = xwindow
+modules-right = weather backlight battery cpu memory wlan pulseaudio date
