--- a/themes/minimal-v2/config.ini
+++ b/themes/minimal-v2/config.ini
@@ -11,14 +11,14 @@ bottom = false
 fixed-center = true
 
 ; wm-restack = bspwm
-; wm-restack = i3
+;wm-restack = i3
 
 override-redirect = false
 
 scroll-up = next
 scroll-down = prev
 
-enable-ipc = true
+enable-ipc = false
 
 background = ${colors.bg}
 foreground = ${colors.fg}
@@ -31,7 +31,7 @@ tray-position = right
 tray-maxsize = 16
 
 cursor-click = pointer
-cursor-scroll = ns-resize
+cursor-scroll = default
 
 [settings]
 screenchange-reload = true
